<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutScreen"
    android:background="@color/deepPurple100"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar_lazaro"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/lazaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar_camila"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />


    <TextView
        android:id="@+id/dev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_name1"
        app:layout_constraintTop_toBottomOf="@id/avatar_camila"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dev2"
        app:layout_constraintBottom_toTopOf="@+id/dev1_git" />


    <TextView
        android:id="@+id/dev1_git"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dev1"
        app:layout_constraintEnd_toStartOf="@id/dev2_git"
        android:text="@string/dev1_email" />

    <TextView
        android:id="@+id/dev2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev2_name"
        app:layout_constraintBottom_toTopOf="@+id/dev2_git"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dev1"
        app:layout_constraintTop_toBottomOf="@id/avatar_lazaro" />

    <TextView
        android:id="@+id/dev2_git"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/dev1_git"
        app:layout_constraintTop_toBottomOf="@id/dev2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/dev2_email" />

    <ImageView
        android:id="@+id/avatar_camila"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/camila"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/avatar_lazaro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>